style.css
body {
    display: flex;
    flex-direction: column;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    min-height: 100vh;
}

a {
    text-decoration: none;
    color: #e5e7eb;
    font-size: 18px;
}

.header {
    display: flex;
    justify-content: space-around;
    background-color: #1f2937;
    padding-top: 20px;
}

.logo-header {
    font-size: 24px;
    color: #f9faf8;
    font-weight: bold;
    width: 500px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    
}

.header-links {
    width: 500px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-wrap: wrap;
    gap: 30px;
}

.hero-title {
    font-size: 48px;
    font-weight: 900;
}

.body {
    display: flex;
    flex: auto;
    flex-direction: column;
}

.top {
    display: flex;
    justify-content: space-around;
    align-items: center;
    color: #f9faf8;
    background-color: #1f2937;
    flex: auto;
}

.hero-image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 500px;
    background-color: #3b4655;
    margin: 80px 0px;
    border-radius: 10px;
    
}

.hero-image {
   width: 200px;
}

.hero {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    width: 500px;
}

.hero button {
    background-color: #3882f6;
    color: #f9faf8;
    border: none;
    font-weight: 700;
    font-size: 16px;
    border-radius: 10px;
    padding: 8px 30px;
}

.middle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex: auto;    
}

.random-information {
    font-size: 36px;
    font-weight: 900;
    margin: 50px;
}

.middle-items {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    gap: 30px;
    flex: auto;
    flex-wrap: wrap;
}

.middle-items img,
.middle-items p {
    display: flex;
    width: 300px;
    border-radius: 10px;
    
}

.quote {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 36px;
    font-style: italic; 
    font-weight: lighter;
    color: #1f2937;
    background-color: #e5e7eb;
    flex: 1 1 auto;
    padding: 50px;
}

.text {
    flex: auto;
    min-width: 200px;
    max-width: 900px;
}

.quote-sign {
    text-align: end;
    font-style: normal;
    font-size: 24px;
    font-weight: 500;
}

.text {
    
}

.bottom {
    display: flex;
    justify-content: center;

}

.bottom-container {
    background-color: #3882f6;
    width: 800px;
    min-height: 50px;
    border-radius: 10px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 50px;
    padding: 25px;
}

.text-container {
    color: #e5e7eb;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.text-container .title {
    font-weight: 700;
    font-size: 18px;
    color: #f9faf8;
}

.bottom-container button {
    padding: 8px 40px;
    background-color: #3882f6;
    border: 2px solid #f9faf8;
    border-radius: 10px;
    color: #f9faf8;
    font-weight: bold;
    font-size: 16px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1f2937;
    color: #e5e7eb;
    height: 80px;
}

